# iot-middleware-freertos-samples

demo/projects/esp32/az-esp-freertos/: CMakeLists.txt  Kconfig.projbuild
demo/projects/esp32/az-esp-freertos/azure-iot-middleware-freertos/: CMakeLists.txt
demo/projects/esp32/az-esp-freertos/azure-iot-middleware-freertos/source/: CMakeLists.txt  azure_iot_provisioning_client.c
demo/projects/esp32/az-esp-freertos/azure-iot-middleware-freertos/source/include/: azure_iot.h  azure_iot_provisioning_client.h
demo/projects/esp32/az-esp-freertos/config/: core_mqtt_config.h  demo_config.h
demo/projects/esp32/az-esp-freertos/examples/tls_basic/: CMakeLists.txt  log_esp.txt  log_esp1.txt  log_esp2.txt  log_esp3.txt  log_esp4.txt  sdkconfig
demo/projects/esp32/az-esp-freertos/examples/tls_basic/config/: core_mqtt_config.h  demo_config.h
demo/projects/esp32/az-esp-freertos/examples/tls_basic/main/: CMakeLists.txt
demo/projects/esp32/az-esp-freertos/examples/tls_basic/main/utilities/: BasicTLSMQTTExample.c
demo/projects/esp32/az-esp-freertos/install-scripts/: Py2requirements.txt  esp-setup-script-20-04.sh  esp-setup-script.sh  readme.md
demo/projects/esp32/az-esp-freertos/port/crypto/: esp_crypto_mbedtls.c
demo/projects/esp32/az-esp-freertos/port/platform/: platform.c
demo/projects/esp32/az-esp-freertos/tls_basic/: CMakeLists.txt  README.md  sdkconfig
demo/projects/esp32/az-esp-freertos/tls_basic/config/: core_mqtt_config.h  demo_config.h
demo/projects/esp32/az-esp-freertos/tls_basic/main/: CMakeLists.txt  tls_basic_main.c
demo/projects/esp32/az-esp-freertos/tls_basic/main/utilities/: az_esp_iot_task.c  az_iot_esp_task.c  az_iot_esp_task.h
demo/projects/esp32/azure-esp-freertos/: CMakeLists.txt
demo/projects/esp32/azure-esp-freertos/components/azure-iot-middleware-freertos/: CMakeLists.txt
demo/projects/esp32/azure-esp-freertos/main/: CMakeLists.txt  Kconfig.projbuild  azure_esp_iot_task.c  component.mk  esp_fr_common.c  main.c
demo/projects/esp32/azure-esp-freertos/main/esp32_tls_transport/: esp_tls_transport.c  esp_tls_transport.h
demo/projects/esp32/azure-esp-freertos/main/exponential_backoff/: exponential_backoff.c  exponential_backoff.h
demo/projects/esp32/azure-esp-freertos/main/include/: azure_esp_iot_task.h  core_mqtt_config.h  demo_config.h  esp_fr_common.h
demo/projects/esp32/azure-esp-freertos/sensors/: sensor_init.c
demo/projects/esp32/esp-fr-test/: CMakeLists.txt  README.md
demo/projects/esp32/esp-fr-test/components/azure-iot-middleware-freertos/: CMakeLists.txt
demo/projects/esp32/esp-fr-test/components/azure-iot-middleware-freertos/source/: CMakeLists.txt
demo/projects/esp32/esp-fr-test/main/: hello_world_main.c
demo/projects/esp32/esp-freertos/: CMakeLists.txt
demo/projects/esp32/esp-freertos/install-script/: esp-setup.sh  readme.md
demo/projects/esp32/esp-freertos/main/: CMakeLists.txt  Kconfig.projbuild  az_freertos_client.c  az_freertos_dps_client.c  component.mk  esp_hw_common.c  main.c
demo/projects/esp32/esp-freertos/main/include/: az_demo_config.h  az_esp_transport_wrapper.h  az_freertos_client.h  az_freertos_dps_client.h  esp_hw_common.h
demos/: CMakeLists.txt
demos/common/utilities/: jws.h  jws_using_mbedtls.c  sample_adu_jws_mbedtls.c
demos/projects/ESPRESSIF/adu/main/: azure_iot_freertos_esp32_pnp_model.c
demos/projects/ESPRESSIF/esp32/components/sample-azure-iot/: transport_tls_esp32.c
demos/projects/NXP/mimxrt1060/: CMakeLists.txt
demos/projects/PC/linux/: main.c
demos/projects/ST/b-l475e-iot01a/: CMakeLists.txt
demos/projects/ST/stm32h745i_discovery/cm7/: CMakeLists.txt
demos/sample_azure_iot_pnp/: sample_azure_iot_pnp.c
libs/azure-iot-middleware-freertos/source/: azure_iot_adu_client.c
libs/azure-iot-middleware-freertos/source/include/: azure_iot_adu_client.h
(+3 files in other folders)
